Fix redirect about me color

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         </header>
 
 
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
 
         <!--Contenido principal-->
         <main>
