--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <meta property="og:title" content="Giovanny Mena - Diseñador UX/UI & Creativo Digital">
 <meta property="og:description" content="Creo proyectos digitales que combinan usabilidad, diseño UX/UI y branding para experiencias memorables.">
-<meta property="og:image" content="https://giovannymenad.github.io/portfolio/assets/preview.png"> <!-- aquí va la URL de tu imagen -->
-<meta property="og:url" content="https://giovannymenad.github.io/portfolio">
+<meta property="og:image" content="https://giovannymenad.github.io/assets/preview.png"> <!-- aquí va la URL de tu imagen -->
+<meta property="og:url" content="https://giovannymenad.github.io">
 <meta property="og:type" content="website">
 
 
