Add Google site verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="j9BOzgZmOnAtVju0XWyqt6bPBAK3TbspPAwr55cRJZA"/>
         <title>Giovanny Mena - Diseñador UX/UI & Creativo Digital</title>
         <meta name="description" content="Diseño experiencias digitales centradas en el usuario, transformando ideas en interfaces intuitivas y proyectos visuales que unen UX/UI, identidad de marca y creatividad.">
 
