--- a/index.html
+++ b/index.html
@@ -190,9 +190,8 @@
                                 <div id="v_description">
                                     <h6 id="v_title">Deseado</h6>
                                     <p id="v_date">Abr - 2023</p>
-                                    <p id="v_review_d">Es una plataforma web muy similar 
-                                        a la cerveza de café macerado ​al frío con clientes 
-                                        mayoristas y minoristas.</p>
+                                    <p id="v_review_d">Es una plataforma web que transmite la esencia del cold brew, 
+                                        refrescante como cerveza, cautivando clientes mayoristas y minoristas.".</p>
                                         <div id="card_tool">
                                             <ul id="tool_d">
                                                 <li>
