Update Date Card Vitio

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <h5 id="v_number">01</h5> 
                                 <div id="v_description">
                                     <h6 id="v_title_v">Vitio</h6>
-                                    <p id="v_date">Ago - 2024 - Actualmente</p>
+                                    <p id="v_date">Ago - 2024 / Septiembre - 2025</p>
                                     <p id="v_review">Lidero al equipo de diseño 
                                         en la construcción de un Design System para la plataforma 
                                         de creación de videos funnel.</p>
