--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 </div> 
                                 
                                 <div id="card_img">
-                                    <img id="vitio_brand" src="assets/ds vitio.png" alt="marca-vitio">
+                                    <img id="vitio_brand" src="assets/vitio.png" alt="marca-vitio">
                                 </div>
                             </a>
             
