--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                                 <div id="v_description">
                                     <h6 id="v_title_v">Vitio</h6>
                                     <p id="v_date">Ago - 2024 / Septiembre - 2025</p>
-                                    <p id="v_review">Lidero al equipo de diseño 
+                                    <p id="v_review">Lideré al equipo de diseño 
                                         en la construcción de un Design System para la plataforma 
-                                        de creación de videos funnel.</p>
+                                        de creación de videos sales funnel.</p>
                                         <div id="card_tool">
                                             <ul id="tool_v">
                                                 <li>
