Update project vitio
Change text sales

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <p id="v_date">Ago - 2024 / Septiembre - 2025</p>
                                     <p id="v_review">Lideré al equipo de diseño 
                                         en la construcción de un Design System para la plataforma 
-                                        de creación de videos sales funnel.</p>
+                                        de creación de videos funnel.</p>
                                         <div id="card_tool">
                                             <ul id="tool_v">
                                                 <li>
