--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@ creatividad inquebrantable al resolver problemas.</h3>
                                                          (Certiprof, 2021).
                                                          <br><br>› Blender 2.9 de cero hasta avanzado (Udemy, 2020).
                                                          <br><br>› Master en Diseño Digital - Adobe Photoshop CC (Udemy, 2019).
-                                <br><br><a id="download_file" href="https://drive.google.com/uc?export=download&id=1dn3-YiE86msDWJrPJJVXjNZkX2igH94e" download>Descarga mi CV</a>
+                                <br><br><a id="download_file" href="https://drive.google.com/file/d/1ifkuA70ObJOFfi0hw-1Yq0yaKAdC7MbB/view" download>Descarga mi CV</a>
 
                             </p>
                         </div>
