--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div id="only" class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-xs-0 col-s-0"></div>
                     <div id="content_logo" class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-5 col-xs-8 col-s-10">
                         <a class="brand_logo" href="index.html">
-                            <img id="brand" src="assets/isogmd.png" alt="marca-giovanny-mena-d">
+                            <img id="brand" src="assets/isogmd_2.png" alt="marca-giovanny-mena-d">
                         </a>
                     </div>
                     <div id="only" class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-1 col-xs-2 col-s-0"></div>
