Update about.html/Soy diseñador a diseñador

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 creatividad inquebrantable al resolver problemas.</h3>
                         </div>
                         <div id="self_description">
-                            <p id="statements">¡Hola! Soy Diseñador Gráfico y Digital con más de 9 años de experiencia en la creación de identidades visuales empresariales y contenido multimedia. Actualmente, me encuentro inmerso en el fascinante mundo de las soluciones innovadoras y centradas en el usuario.
+                            <p id="statements">¡Hola! Diseñador Gráfico y Digital con más de 9 años de experiencia en la creación de identidades visuales empresariales y contenido multimedia. Actualmente, me encuentro inmerso en el fascinante mundo de las soluciones innovadoras y centradas en el usuario.
 
 <br><br>Mi transición hacia el diseño de interfaces (UI) y la experiencia de usuario (UX) ha sido un hito en mi carrera, transformándome en un diseñador de productos apasionado. Mi obsesión por los detalles y la perfección de cada píxel hacen que mis soluciones visuales sean claras, eficaces y sin fisuras, lo que repercute positivamente en el éxito de los productos.
 <br><br>Me considero un profesional en continua y constante evolución, acreditado en metodologías ágiles, lo que me otorga un buen grado de valor en entornos iterativos y dinámicos. Soy quien trabaja codo con codo con los equipos de desarrollo gracias a mis conocimientos en lenguajes front-end, lo que facilita la creación conjunta de soluciones viables y funcionales.
